# The-Weeping-Dawn

./: CMakeLists.txt  README.md  The Weeping Dawn.sln  The Weeping Dawn.vcxproj  The Weeping Dawn.vcxproj.filters  how dd92743git show dd92743git show dd92743git show dd92743git show dd92743git show dd92743  main.cpp
.github/workflows/: cmake-multi-platform.yml
The Weeping Dawn/CMake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  TheWeepingDawn.slnx  TheWeepingDawn.vcxproj  TheWeepingDawn.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
assets/data/worlds/: NewWorld.json  NewWorld_1.json
assets/models/: Rock.mtl  Rocketa.mtl  Test1.mtl  Test5.mtl  Tree.mtl
assets/shaders/: fragment.glsl  vertex.glsl
source/_backups/: fragment.glsl.txt  renderer.cpp.hpp.txt
source/_backups/vsm/: page_table.hpp  virtual_shadow_map.cpp  virtual_shadow_map.hpp  virtual_shadow_maps.cpp  vsm_constants.hpp
source/_backups/vsm/shaders/: mark_pages.comp  mark_pages.frag
source/engine/include/: Image.hpp  InstanceUI.hpp  SourceLight.hpp  biome.hpp  camera.hpp  chunkManager.hpp  dimensionManager.hpp  engine.hpp  material.hpp  matrix4.hpp  physics.hpp  postProcessing.hpp  renderer.hpp  sceneManager.hpp  shader.hpp  shadowMap.hpp  skybox.hpp  targetArch.hpp  terrain.hpp  texture.hpp  vector2.hpp  vector3.hpp  vector4.hpp  worldManager.hpp
source/engine/instances/: Button.cpp  Button.hpp  Character.cpp  Character.hpp  Container.cpp  Container.hpp  Frame.cpp  Frame.hpp  InstanceUI.cpp  Object3D.cpp  Object3D.hpp  Text.cpp  Text.hpp  instance.cpp  instance.hpp
source/engine/src/: Image.cpp  SourceLight.cpp  camera.cpp  chunkManager.cpp  dimensionManager.cpp  engine.cpp  matrix4.cpp  physics.cpp  postProcessing.cpp  renderer.cpp  sceneManager.cpp  shader.cpp  shadowMap.cpp  skybox.cpp  terrain.cpp  texture.cpp  vector2.cpp  vector3.cpp  vector4.cpp  worldManager.cpp
source/include/: glad.c  glad.h
source/include/GLM/gtx/: norm.hpp  quaternion.hpp  rotate_vector.hpp  transform.hpp  vector_angle.hpp
source/include/reactphysics3d/utils/: DefaultLogger.h
source/libraries/: FLAC.lib  freetype.lib  glfw3.lib  libssh2.lib  mbedcrypto.lib  mbedtls.lib  mbedx509.lib  ogg.lib  sfml-main.lib  sfml-network-s.lib  sfml-window-s.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib
